--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "electron-app",
+	"name": "hydration-tracker",
 	"version": "1.0.0",
-	"description": "An Electron application with Svelte and TypeScript",
+	"description": "Stay hydrated, stay healthy! 💦 ",
 	"main": "./out/main/index.js",
 	"author": "example.com",
 	"homepage": "https://electron-vite.org",
